// Specification of the store RPC.
//
// This provided access to the blockchain data to the other nodes.
syntax = "proto3";
package rpc_store;

import "google/protobuf/empty.proto";
import "types/account.proto";
import "types/blockchain.proto";
import "types/transaction.proto";
import "types/note.proto";
import "types/primitives.proto";
import "store/shared.proto";

// RPC STORE API
// ================================================================================================

// Store API for the RPC component
service Rpc {
    // Returns the status info.
    rpc Status(google.protobuf.Empty) returns (StoreStatus) {}

    // Returns a nullifier proof for each of the requested nullifiers.
    rpc CheckNullifiers(NullifierList) returns (CheckNullifiersResponse) {}

    // Returns the latest state of an account with the specified ID.
    rpc GetAccountDetails(account.AccountId) returns (account.AccountDetails) {}

    // Returns the latest state proof of the specified account.
    rpc GetAccountProof(AccountProofRequest) returns (AccountProof) {}

    // Returns raw block data for the specified block number.
    rpc GetBlockByNumber(blockchain.BlockNumber) returns (blockchain.MaybeBlock) {}

    // Retrieves block header by given block number. Optionally, it also returns the MMR path
    // and current chain length to authenticate the block's inclusion.
    rpc GetBlockHeaderByNumber(shared.BlockHeaderByNumberRequest) returns (shared.BlockHeaderByNumberResponse) {}

    // Returns a list of committed notes matching the provided note IDs.
    rpc GetNotesById(note.NoteIdList) returns (note.CommittedNoteList) {}

    // Returns the script for a note by its root.
    rpc GetNoteScriptByRoot(note.NoteRoot) returns (MaybeNoteScript) {}

    // Returns a list of nullifiers that match the specified prefixes and are recorded in the node.
    //
    // Note that only 16-bit prefixes are supported at this time.
    rpc SyncNullifiers(SyncNullifiersRequest) returns (SyncNullifiersResponse) {}

    // Returns info which can be used by the client to sync up to the tip of chain for the notes they are interested in.
    //
    // Client specifies the `note_tags` they are interested in, and the block height from which to search for new for
    // matching notes for. The request will then return the next block containing any note matching the provided tags.
    //
    // The response includes each note's metadata and inclusion proof.
    //
    // A basic note sync can be implemented by repeatedly requesting the previous response's block until reaching the
    // tip of the chain.
    rpc SyncNotes(SyncNotesRequest) returns (SyncNotesResponse) {}

    // Returns info which can be used by the client to sync up to the latest state of the chain
    // for the objects (accounts, notes, nullifiers) the client is interested in.
    //
    // This request returns the next block containing requested data. It also returns `chain_tip`
    // which is the latest block number in the chain. Client is expected to repeat these requests
    // in a loop until `response.block_header.block_num == response.chain_tip`, at which point
    // the client is fully synchronized with the chain.
    //
    // Each request also returns info about new notes, nullifiers etc. created. It also returns
    // Chain MMR delta that can be used to update the state of Chain MMR. This includes both chain
    // MMR peaks and chain MMR nodes.
    //
    // For preserving some degree of privacy, note tags and nullifiers filters contain only high
    // part of hashes. Thus, returned data contains excessive notes and nullifiers, client can make
    // additional filtering of that data on its side.
    rpc SyncState(SyncStateRequest) returns (SyncStateResponse) {}

    // Returns account vault updates for specified account within a block range.
    rpc SyncAccountVault(SyncAccountVaultRequest) returns (SyncAccountVaultResponse) {}

    // Returns storage map updates for specified account and storage slots within a block range.
    rpc SyncStorageMaps(SyncStorageMapsRequest) returns (SyncStorageMapsResponse) {}
}

// STORE STATUS
// ================================================================================================

// Represents the status of the store.
message StoreStatus {
    // The store's running version.
    string version = 1;

    // The store's status.
    string status = 2;

    // Number of the latest block in the chain.
    fixed32 chain_tip = 3;
}

// GET ACCOUNT PROOF
// ================================================================================================

// Returns the latest state proof of the specified accounts.
message AccountProofRequest {
    // Request the details for a public account.
    message AccountDetailsRequest {
        // Represents a storage slot index and the associated map keys.
        message StorageRequest {
            // Storage slot index ([0..255])
            uint32 storage_slot_index = 1;

            // A list of map keys (Digests) associated with this storage slot.
            repeated primitives.Digest map_keys = 2;
        }

        // Account code commitment corresponding to the last-known `AccountCode` for the requested
        // account. The response will include only code that is known.
        optional primitives.Digest code_commitment = 1;

        // List of storage requests for this account.
        repeated StorageRequest storage_requests = 2;
    }

    // The account ID for this request.
    account.AccountId account_id = 1;

    // A account detail requests, including map keys + values.
    optional AccountDetailsRequest account_details = 2;
}

// Represents the result of getting account proofs.
message AccountProof {
    // State header, available for public accounts only.
    message AccountDetailsResponse {
        // Represents a single storage slot with the requested keys and their respective values.
        message StorageSlotMapProof {
            // The storage slot index ([0..255]).
            uint32 storage_slot = 1;

            // Merkle proof of the map value
            primitives.SmtOpening smt_proof = 2;
        }

        // Account header, always included.
        account.AccountHeader header = 1;

        // Account storage header containing slot types and commitments.
        account.AccountStorageHeader storage_header = 2;

        // Account code, if the current account code does not match the request provided commitment digest.
        optional bytes account_code = 3;

        // Storage slots information for this account
        repeated StorageSlotMapProof storage_maps = 4;
    }

    // Block number at which the state of the accounts is returned.
    fixed32 block_num = 1;

    // The account witness for the current state commitment of one account ID.
    account.AccountWitness witness = 2;

    // State header for public accounts. Filled only if the flag `AccountDetailsRequest` was
    // present and the account was a public account/the information was available.
    optional AccountDetailsResponse details = 3;
}

// CHECK NULLIFIERS
// ================================================================================================

// List of nullifiers to return proofs for.
message NullifierList {
    // List of nullifiers to return proofs for.
    repeated primitives.Digest nullifiers = 1;
}

// Represents the result of checking nullifiers.
message CheckNullifiersResponse {
    // Each requested nullifier has its corresponding nullifier proof at the same position.
    repeated primitives.SmtOpening proofs = 1;
}

// SYNC NULLIFIERS
// ================================================================================================

// Returns a list of nullifiers that match the specified prefixes and are recorded in the node.
message SyncNullifiersRequest {
    // Block number from which the nullifiers are requested (inclusive).
    BlockRange block_range = 1;

    // Number of bits used for nullifier prefix. Currently the only supported value is 16.
    uint32 prefix_len = 2;

    // List of nullifiers to check. Each nullifier is specified by its prefix with length equal
    // to `prefix_len`.
    repeated uint32 nullifiers = 3;
}

// Represents the result of syncing nullifiers.
message SyncNullifiersResponse {
    // Represents a single nullifier update.
    message NullifierUpdate {
        // Nullifier ID.
        primitives.Digest nullifier = 1;

        // Block number.
        fixed32 block_num = 2;
    }

    // Pagination information.
    PaginationInfo pagination_info = 1;

    // List of nullifiers matching the prefixes specified in the request.
    repeated NullifierUpdate nullifiers = 2;
}

// SYNC STATE
// ================================================================================================

// State synchronization request.
//
// Specifies state updates the client is interested in. The server will return the first block which
// contains a note matching `note_tags` or the chain tip. And the corresponding updates to
// `account_ids` for that block range.
message SyncStateRequest {
    // Last block known by the client. The response will contain data starting from the next block,
    // until the first block which contains a note of matching the requested tag, or the chain tip
    // if there are no notes.
    fixed32 block_num = 1;

    // Accounts' commitment to include in the response.
    //
    // An account commitment will be included if-and-only-if it is the latest update. Meaning it is
    // possible there was an update to the account for the given range, but if it is not the latest,
    // it won't be included in the response.
    repeated account.AccountId account_ids = 2;

    // Specifies the tags which the client is interested in.
    repeated fixed32 note_tags = 3;
}

// Represents the result of syncing state request.
message SyncStateResponse {
    // Number of the latest block in the chain.
    fixed32 chain_tip = 1;

    // Block header of the block with the first note matching the specified criteria.
    blockchain.BlockHeader block_header = 2;

    // Data needed to update the partial MMR from `request.block_num + 1` to `response.block_header.block_num`.
    primitives.MmrDelta mmr_delta = 3;

    // List of account commitments updated after `request.block_num + 1` but not after `response.block_header.block_num`.
    repeated account.AccountSummary accounts = 5;

    // List of transactions executed against requested accounts between `request.block_num + 1` and
    // `response.block_header.block_num`.
    repeated transaction.TransactionSummary transactions = 6;

    // List of all notes together with the Merkle paths from `response.block_header.note_root`.
    repeated note.NoteSyncRecord notes = 7;
}

// SYNC ACCOUNT VAULT
// ================================================================================================

// Account vault synchronization request.
//
// Allows clients to sync asset values for specific public accounts within a block range.
message SyncAccountVaultRequest {
    // Block range from which to start synchronizing.
    //
    // If the `block_to` is specified, this block must be close to the chain tip (i.e., within 30 blocks),
    // otherwise an error will be returned.
    BlockRange block_range = 1;

    // Account for which we want to sync asset vault.
    account.AccountId account_id = 2;
}

message SyncAccountVaultResponse {
    // Pagination information.
    PaginationInfo pagination_info = 1;

    // List of asset updates for the account.
    //
    // Multiple updates can be returned for a single asset, and the one with a higher `block_num`
    // is expected to be retained by the caller.
    repeated AccountVaultUpdate updates = 2;
}

message AccountVaultUpdate {
    // Vault key associated with the asset.
    primitives.Digest vault_key = 1;

    // Asset value related to the vault key.
    // If not present, the asset was removed from the vault.
    optional primitives.Asset asset = 2;

    // Block number at which the above asset was updated in the account vault.
    fixed32 block_num = 3;
}

// SYNC NOTES
// ================================================================================================

// Note synchronization request.
//
// Specifies note tags that client is interested in. The server will return the first block which
// contains a note matching `note_tags` or the chain tip.
message SyncNotesRequest {
    // Last block known by the client. The response will contain data starting from the next block,
    // until the first block which contains a note of matching the requested tag.
    fixed32 block_num = 1;

    // Specifies the tags which the client is interested in.
    repeated fixed32 note_tags = 2;
}

// Represents the result of syncing notes request.
message SyncNotesResponse {
    // Number of the latest block in the chain.
    fixed32 chain_tip = 1;

    // Block header of the block with the first note matching the specified criteria.
    blockchain.BlockHeader block_header = 2;

    // Merkle path to verify the block's inclusion in the MMR at the returned `chain_tip`.
    //
    // An MMR proof can be constructed for the leaf of index `block_header.block_num` of
    // an MMR of forest `chain_tip` with this path.
    primitives.MerklePath mmr_path = 3;

    // List of all notes together with the Merkle paths from `response.block_header.note_root`.
    repeated note.NoteSyncRecord notes = 4;
}

// SYNC STORAGE MAP
// ================================================================================================

// Storage map synchronization request.
//
// Allows clients to sync storage map values for specific public accounts within a block range,
// with support for cursor-based pagination to handle large storage maps.
message SyncStorageMapsRequest {
    // Block range from which to start synchronizing.
    //
    // If the `block_to` is specified, this block must be close to the chain tip (i.e., within 30 blocks),
    // otherwise an error will be returned.
    BlockRange block_range = 1;

    // Account for which we want to sync storage maps.
    account.AccountId account_id = 3;
}

message SyncStorageMapsResponse {
    // Pagination information.
    PaginationInfo pagination_info = 1;

    // The list of storage map updates.
    //
    // Multiple updates can be returned for a single slot index and key combination, and the one
    // with a higher `block_num` is expected to be retained by the caller.
    repeated StorageMapUpdate updates = 2;
}

// Represents a single storage map update.
message StorageMapUpdate {
    // Block number in which the slot was updated.
    fixed32 block_num = 1;

    // Slot index ([0..255]).
    uint32 slot_index = 2;

    // The storage map key.
    primitives.Digest key = 3;

    // The storage map value.
    primitives.Digest value = 4;
}

// GET NOTE SCRIPT BY ROOT
// ================================================================================================

// Represents a note script or nothing.
message MaybeNoteScript {
    // The script for a note by its root.
    optional note.NoteScript script = 1;
}

// BLOCK RANGE
// ================================================================================================

// Represents a block range.
message BlockRange {
    // Block number from which to start (inclusive).
    fixed32 block_from = 1;

    // Block number up to which to check (inclusive). If not specified, checks up to the latest block.
    optional fixed32 block_to = 2;
}

// PAGINATION INFO
// ================================================================================================

// Represents pagination information for chunked responses.
//
// Pagination is done using block numbers as the axis, allowing clients to request
// data in chunks by specifying block ranges and continuing from where the previous
// response left off.
//
// To request the next chunk, the client should use `block_num + 1` from the previous response
// as the `block_from` for the next request.
message PaginationInfo {
    // Current chain tip
    fixed32 chain_tip = 1;

    // The block number of the last check included in this response.
    //
    // For chunked responses, this may be less than `request.block_range.block_to`.
    // If it is less than request.block_range.block_to, the user is expected to make a subsequent request
    // starting from the next block to this one (ie, request.block_range.block_from = block_num + 1).
    fixed32 block_num = 2;
}
