syntax = "proto3";
package errors;

enum SubmitProvenTransactionError {
    SUBMIT_PROVEN_TRANSACTION_ERROR_UNSPECIFIED = 0;
    INTERNAL_ERROR = 1;
    DESERIALIZATION_FAILED = 2;
    INVALID_TRANSACTION_PROOF = 3;
    INCORRECT_ACCOUNT_INITIAL_COMMITMENT = 4;
    INPUT_NOTES_ALREADY_CONSUMED = 5;
    UNAUTHENTICATED_NOTES_NOT_FOUND = 6;
    OUTPUT_NOTES_ALREADY_EXIST = 7;
    TRANSACTION_EXPIRED = 8;
}
